--- a/etch-a-sketch/styles.css
+++ b/etch-a-sketch/styles.css
@@ -1,5 +1,5 @@
-#container {
-    width: 50%;
-    height: 50%;
-    margin-left: 5%;
+td {
+    width: 25px;
+    height: 25px;
+    border: 0.1px solid black;
 }
