--- a/calculator/styles.css
+++ b/calculator/styles.css
@@ -1,4 +1,45 @@
+body {
+   background-color: rgb(106, 146, 179);
+}
+
+.container {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   margin-top: 150px;
+}
+
 .displays {
-   border: 1px solid black;
-   width: 50vh
+   height: 120px;
+   width: 400px;
+   background-color: rgb(199, 194, 194);
+   border: 3px solid black;
+   color: black;
+   padding-right: 10px;
+   box-shadow: 3px 2px black;
+   font-weight: bold;
+}
+
+p {
+   display: flex;
+   flex-direction: row-reverse;
+   font-size: 25px;
+}
+
+.low {
+   justify-content: start;
+}
+
+button {
+   width: 100px;
+   height: 75px;
+   background-color: gray;
+   border: 3px solid black;
+   color: rgb(0, 3, 7);
+   box-shadow: 4.5px 2px black;
+   font-weight:900;
+}
+
+#equal {
+   width: 204px;
 }
