--- a/etch-a-sketch/style.css
+++ b/etch-a-sketch/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    background: url(pencil.jpg) no-repeat center center fixed;
+    background: url(https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/PORKHCBPH4I6XFWCVLB7CYRBLU.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
